--- a/modal/modal-confirmacao/modal-error.html
+++ b/modal/modal-confirmacao/modal-error.html
@@ -12,7 +12,7 @@
     <h3><i class="fa fa-times"></i> Erro ao gerar relatório!</h3>
 </div>
 <style>
-.modal-confirmacao{
+/* .modal-confirmacao{
     position: absolute;
     width: 500px;
     height: 90px;
@@ -20,7 +20,7 @@
     box-shadow: 0px 1px 5px black;
     border-bottom: 5px solid #e00;
     left: 50%;
-    /* top: 50%; */
+    /* top: 50%; 
      margin-top: -145px;
     margin-left: -250px;
 }
@@ -32,6 +32,6 @@
     border: 1px solid #fff;
     border-radius: 50px;
     padding: 2px 5px;
-}
+} */
     
 </style>
